<resources>
    <string name="app_name">Perfit</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="registery_successfull">Thanks for registering!</string>

    <string name="please_wait">Please Wait&#8230;</string>

    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you a email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>

    <string name="email_sent_success">"Emails sent successfully to reset password! \"</string>
    <string name="register_success">You are registered successfully.</string>

    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>

    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>

    <string name="image_selection_failed">Image selection Failed!</string>

    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>

    <string name="msg_profile_update_success">Your profile is updated successfully.</string>
    <!--    <string name="title_activity_dashboard">DashboardActivity</string>-->

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="title_closet">Closet</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_outfits">Outfits</string>

    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Location</string>
    <string name="btn_lbl_logout">Logout</string>

    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="action_add_item">Add Item</string>
    <string name="action_add_outfit">Add Outfit</string>


    <string name="title_add_item">ADD CLOTHES</string>
    <!--    -->
    <string name="et_hint_item_title">Item Title</string>
    <string name="et_hint_product_price">Product Price ($)</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_quantity">Product Quantity</string>

    <string name="err_msg_select_product_image">Please select product image.</string>
    <string name="err_msg_enter_product_title">Please enter product title.</string>
    <string name="err_msg_enter_product_price">Please enter product price.</string>
    <string name="err_msg_enter_product_description">Please enter product description.</string>
    <string name="err_msg_enter_product_quantity">Please enter product quantity.</string>

    <string name="item_uploaded_success_message">Your product is uploaded successfully.</string>
    <string name="no_item_added_yet">No products added yet!</string>


    <string name="product_uploaded_success_message">Your product is uploaded successfully.</string>
    <string name="no_items_added_yet">No items added yet!</string>
    <string name="no_dashboard_item_found">No items found!</string>

    <string name="product_delete_success_message">Your product is deleted successfully.</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rb_lbl_Spring_Summer">Spring-Summer</string>
    <string name="rb_lbl_Winter_Fall">Winter-Fall</string>
    <string name="rb_lbl_Sporty">Sports</string>
    <string name="rb_lbl_Casual">Casual</string>
    <string name="rb_lbl_Formal">Formal</string>
    <string name="rb_lbl_Night">Night</string>
    <string name="rb_lbl_Top">Top</string>
    <string name="rb_lbl_Bottom">Bottom</string>
    <string name="rb_lbl_Shoes">Shoes</string>
    <string name="btn_lbl_laundry">Laundry</string>


    <string-array name="season">
        <item>Winter</item>
        <item>Summer</item>
    </string-array>

    <string-array name="occasion">
        <item>Sports</item>
        <item>Casual</item>
        <item>Formal</item>
        <item>Night</item>
    </string-array>

    <string-array name="part">
        <item>Top</item>
        <item>Bottom</item>
        <item>Shoes</item>
    </string-array>

    <string-array name="season_Dashboard">
        <item>Winter-Fall</item>
        <item>Summer-Spring</item>
    </string-array>


</resources>